# kagi-mcp

./: .dockerignore  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  release-please-config.json  skills-lock.json
kagi-api/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
kagi-api/src/: api_trait.rs  builder.rs  client.rs  client_builder.rs  error.rs  lib.rs  types.rs
kagi-api/src/types/: error_response.rs  extract_request.rs  extract_response.rs  mod.rs  search_extract_config.rs  search_lens.rs  search_personalizations.rs  search_request.rs  search_response.rs
kagi-api/tests/: characterization.rs  error_tests.rs  extract_tests.rs  search_tests.rs  wiremock.rs
kagi-api/tests/common/: mod.rs
kagi-mcp/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
kagi-mcp/migrations/: 20250101000001_create_cache_entries.sql  20250102000001_recreate_cache_entries.sql  20260524000001_rebuild_schema.sql  20260531000001_add_metrics_table.sql  AGENTS.md
kagi-mcp/src/: config.rs  domain.rs  format.rs  guard.rs  lib.rs  logging.rs  main.rs  server.rs  subscriber.rs  validation.rs
kagi-mcp/src/cache/: AGENTS.md  error.rs  evict.rs  key.rs  mod.rs  models.rs  store.rs
kagi-mcp/src/format/: ellipsis.rs  errors.rs  extract.rs  json.rs  mod.rs  search.rs  text_helpers.rs  usage.rs
kagi-mcp/src/format/snapshots/: kagi_mcp__format__extract__tests__when_extract_data_has_no_markdown_then_should_skip_content.snap  kagi_mcp__format__extract__tests__when_extract_error_without_message_then_should_use_fallback.snap  kagi_mcp__format__extract__tests__when_extract_fails_then_should_format_error.snap  kagi_mcp__format__extract__tests__when_extract_has_data_and_errors_then_should_include_both.snap  kagi_mcp__format__extract__tests__when_extract_has_fallback_message_then_should_render_as_content.snap  kagi_mcp__format__extract__tests__when_extract_has_multiple_data_items_then_should_show_all.snap  kagi_mcp__format__extract__tests__when_extract_is_empty_then_should_return_no_content.snap  kagi_mcp__format__extract__tests__when_extract_succeeds_then_should_format_content.snap  kagi_mcp__format__search__tests__when_format_search_with_ellipsis_run_in_snippet_then_should_collapse.snap  kagi_mcp__format__search__tests__when_format_search_with_html_entities_in_snippet_then_should_decode.snap  kagi_mcp__format__search__tests__when_format_search_with_html_entities_in_title_then_should_decode.snap  kagi_mcp__format__search__tests__when_format_search_with_iso_timestamp_in_time_then_should_render_date_only.snap  kagi_mcp__format__search__tests__when_image_has_null_title_then_should_render_untitled.snap  kagi_mcp__format__search__tests__when_news_result_has_paywalled_and_language_then_should_render_both.snap  kagi_mcp__format__search__tests__when_podcast_has_duration_then_should_render_duration.snap  kagi_mcp__format__search__tests__when_search_data_is_empty_then_should_return_no_results.snap  kagi_mcp__format__search__tests__when_search_has_adjacent_question_then_should_format_related_questions.snap  kagi_mcp__format__search__tests__when_search_has_adjacent_question_without_question_prop_then_should_fallback.snap  kagi_mcp__format__search__tests__when_search_has_all_8_web_categories_then_each_should_have_distinct_header.snap  kagi_mcp__format__search__tests__when_search_has_direct_answer_then_should_format.snap  kagi_mcp__format__search__tests__when_search_has_direct_answer_with_multiple_results_then_should_show_all.snap  kagi_mcp__format__search__tests__when_search_has_image_with_missing_dimensions_then_should_use_question_mark.snap  kagi_mcp__format__search__tests__when_search_has_images_then_should_format_images_section.snap  kagi_mcp__format__search__tests__when_search_has_infobox_with_props_then_should_format_all.snap  kagi_mcp__format__search__tests__when_search_has_infobox_without_props_then_should_skip_props.snap  kagi_mcp__format__search__tests__when_search_has_infobox_without_snippet_then_should_skip_snippet.snap  kagi_mcp__format__search__tests__when_search_has_listicle_without_snippet_then_should_omit_snippet.snap  kagi_mcp__format__search__tests__when_search_has_mixed_results_then_should_format_all_sections.snap  kagi_mcp__format__search__tests__when_search_has_news_without_time_then_should_omit_published.snap  kagi_mcp__format__search__tests__when_search_has_package_tracking_then_should_format.snap  kagi_mcp__format__search__tests__when_search_has_podcast_creator_then_should_format.snap  kagi_mcp__format__search__tests__when_search_has_related_searches_then_should_format.snap  kagi_mcp__format__search__tests__when_search_has_weather_then_should_format.snap  kagi_mcp__format__search__tests__when_search_has_weather_with_multiple_entries_then_should_show_all.snap  kagi_mcp__format__search__tests__when_search_has_web_results_then_should_format_web_section.snap  kagi_mcp__format__search__tests__when_search_result_has_ai_possible_true_then_should_render_possibly_ai.snap  kagi_mcp__format__search__tests__when_search_result_has_both_ai_flags_then_generated_takes_precedence.snap  kagi_mcp__format__search__tests__when_search_result_has_multiple_props_then_should_render_all.snap  kagi_mcp__format__search__tests__when_search_result_has_non_english_language_then_should_render_language.snap  kagi_mcp__format__search__tests__when_search_result_has_paywalled_false_then_should_not_render_paywalled.snap  (+7 more)
kagi-mcp/src/metrics/: AGENTS.md  error.rs  mod.rs  models.rs  store.rs
kagi-mcp/src/tools/: AGENTS.md  domain.rs  errors.rs  extract.rs  mod.rs  output_format.rs  param_serde.rs  progress.rs  search.rs  shared.rs  truncate.rs
kagi-mcp/src/tools/extract/: AGENTS.md  batch.rs  errors.rs  (+7 more)
kagi-mcp/templates/: extract_results.md  search_results.md  usage_results.md
kagi-mcp/tests/: cache_integration.rs  cache_tests.rs  fallback_tests.rs  integration.rs  log_output_tests.rs  server_tests.rs  subscriber_tests.rs
kagi-mcp/tests/common/: mod.rs
kagi-mcp/tests/fixtures/: extract-response.json  search-response.json  search_response_with_group_id.json
(+20 files in other folders)
