[workspace]
resolver = "2"
members = ["kagi-api", "kagi-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kagi MCP Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.14"
async-trait = "0.1"
schemars = "1.2"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
