[workspace]
resolver = "2"
members = ["kagi-api", "kagi-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kagi MCP Contributors"]
description = "MCP server for the Kagi Search API"
repository = "https://github.com/Silvenga/kagi-mcp"
homepage = "https://github.com/Silvenga/kagi-mcp"
documentation = "https://github.com/Silvenga/kagi-mcp"
readme = "README.md"
keywords = ["kagi", "search", "mcp", "api"]
categories = ["web-programming::http-client", "command-line-utilities"]
rust-version = "1.84"

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
create_dir = "warn"
else_if_without_else = "warn"
filetype_is_file = "warn"
infinite_loop = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

# Pedantic
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
iter_over_hash_type = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
wildcard_dependencies = "warn"
redundant_feature_names = "warn"
negative_feature_names = "warn"
cargo_common_metadata = "warn"
absolute_paths = "warn"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.20.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
url = "2.5.8"
thiserror = "2.0.18"
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
mockall = "0.15.0"
async-trait = "0.1.89"
schemars = "1.2.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
reqwest-middleware = "0.5.2"
reqwest-retry = "0.9.1"
