[package]
name = "kagi-api"
version = "0.1.0"
description = "Kagi Search and Extract API client library"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["kagi", "search", "api", "client"]
categories = ["web-programming::http-client", "api-bindings"]
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true, features = ["json"] }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
wiremock = "0.6.5"
tokio = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
mock = ["dep:mockall"]
