[package]
name = "kagi-mcp"
version = "0.1.0"
description = "MCP server for the Kagi Search API"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["kagi", "mcp", "search", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
kagi-api = { path = "../kagi-api" }
rmcp = { version = "1.7.0", features = ["server", "client", "transport-io", "transport-async-rw", "transport-streamable-http-server", "schemars"] }
axum = "0.8.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { workspace = true, features = ["io-std", "io-util", "process", "rt", "net", "signal"] }
tokio-util = "0.7.18"
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
url = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
html-escape = "0.2.13"
askama = { version = "0.16.0", features = ["serde_json"] }
publicsuffix = { version = "2.3.0", default-features = false }
shellexpand = "3.1.0"
dirs = "6"

[dev-dependencies]
mockall = { workspace = true }
kagi-api = { path = "../kagi-api", features = ["mock"] }
wiremock = "0.6.5"
assert_cmd = "2.2.2"
tempfile = "3.14.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
insta = "1.42"
